Add example `tester` service to show API Integration Testing of a Goa System (#331)
* initial commit

* Empty-Commit

* add readme file (still need to fill out)

* tester readme update

* Trying out a workflow to run integration tests against local binaries

* Add proto install to /example/weather/scripts/setup

* fix integration.yaml

* disable mono on ubuntu

* move mono stop

* Try to find out what's running on 8084

* Trying to disable mono?

* trying to stop mono 2

* add a sleep after stop/disable?

* add some echo

* see if stop/disable mono fails

* add back in || true, change front ports to see if this even works at all

* oops forgot to change int test port

* try no send to dev null?

* sleep before testing

* take out netstat

* sleep longer? give time for docker to do work to get grafana?

* remove dev>null again... :\

* sleep 60 :(

* Implement review comment changes

* Fix runTests check for filtering if

* Empty-Commit

* try starting each service individually, check fo rmono

* just KILL mono?

* back to 8084, check all ports

* fix typo

* add flag to turn off grafana for services (for CI testing)

* clean up integration.yaml script

* review fixes

* Get Stack Trace to Err Log on Panic

* small fixes for style

* protoc -> 25.1, better wait in integration.yaml

* Add synchronous testing feature

* Make one of the synchronous as an example

* move func maps to service definition
