# example/weather/services/front/gen/http/front/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.11.0, DO NOT EDIT.
+// Code generated by goa v3.14.0, DO NOT EDIT.
 //
 // front HTTP server encoders and decoders
 //
@@ -11,6 +11,7 @@ package server
 import (
 	"context"
 	"errors"
+	"io"
 	"net/http"
 
 	front "goa.design/clue/example/weather/services/front/gen/front"
@@ -20,8 +21,8 @@ import (
 
 // EncodeForecastResponse returns an encoder for responses returned by the
 // front forecast endpoint.
-func EncodeForecastResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+func EncodeForecastResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
 		res, _ := v.(*front.Forecast2)
 		enc := encoder(ctx, w)
 		body := NewForecastResponseBody(res)
@@ -32,8 +33,8 @@ func EncodeForecastResponse(encoder func(context.Context, http.ResponseWriter) g
 
 // DecodeForecastRequest returns a decoder for requests sent to the front
 // forecast endpoint.
-func DecodeForecastRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
-	return func(r *http.Request) (interface{}, error) {
+func DecodeForecastRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
 		var (
 			ip  string
 			err error
@@ -65,7 +66,7 @@ func EncodeForecastError(encoder func(context.Context, http.ResponseWriter) goah
 			var res *goa.ServiceError
 			errors.As(v, &res)
 			enc := encoder(ctx, w)
-			var body interface{}
+			var body any
 			if formatter != nil {
 				body = formatter(ctx, res)
 			} else {
@@ -77,6 +78,51 @@ func EncodeForecastError(encoder func(context.Context, http.ResponseWriter) goah
 		default:
 			return encodeError(ctx, w, v)
 		}
+	}
+}
+
+// EncodeTestAllResponse returns an encoder for responses returned by the front
+// test_all endpoint.
+func EncodeTestAllResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(*front.TestResults)
+		enc := encoder(ctx, w)
+		body := NewTestAllResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeTestAllRequest returns a decoder for requests sent to the front
+// test_all endpoint.
+func DecodeTestAllRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
+		var (
+			body TestAllRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		payload := NewTestAllPayload(&body)
+
+		return payload, nil
+	}
+}
+
+// EncodeTestSmokeResponse returns an encoder for responses returned by the
+// front test_smoke endpoint.
+func EncodeTestSmokeResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(*front.TestResults)
+		enc := encoder(ctx, w)
+		body := NewTestSmokeResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
 	}
 }
 
@@ -103,6 +149,41 @@ func marshalFrontPeriodToPeriodResponseBody(v *front.Period) *PeriodResponseBody
 		Temperature:     v.Temperature,
 		TemperatureUnit: v.TemperatureUnit,
 		Summary:         v.Summary,
+	}
+
+	return res
+}
+
+// marshalFrontTestCollectionToTestCollectionResponseBody builds a value of
+// type *TestCollectionResponseBody from a value of type *front.TestCollection.
+func marshalFrontTestCollectionToTestCollectionResponseBody(v *front.TestCollection) *TestCollectionResponseBody {
+	res := &TestCollectionResponseBody{
+		Name:      v.Name,
+		Duration:  v.Duration,
+		PassCount: v.PassCount,
+		FailCount: v.FailCount,
+	}
+	if v.Results != nil {
+		res.Results = make([]*TestResultResponseBody, len(v.Results))
+		for i, val := range v.Results {
+			res.Results[i] = marshalFrontTestResultToTestResultResponseBody(val)
+		}
+	}
+
+	return res
+}
+
+// marshalFrontTestResultToTestResultResponseBody builds a value of type
+// *TestResultResponseBody from a value of type *front.TestResult.
+func marshalFrontTestResultToTestResultResponseBody(v *front.TestResult) *TestResultResponseBody {
+	if v == nil {
+		return nil
+	}
+	res := &TestResultResponseBody{
+		Name:     v.Name,
+		Passed:   v.Passed,
+		Error:    v.Error,
+		Duration: v.Duration,
 	}
 
 	return res
