# example/weather/services/front/gen/http/openapi3.yaml
@@ -20,9 +20,9 @@ paths:
                   required: true
                   schema:
                     type: string
-                    example: 26.102.183.14
+                    example: 137.67.93.10
                     format: ip
-                  example: 169.98.225.210
+                  example: 57.127.156.27
             responses:
                 "200":
                     description: OK response.
@@ -55,12 +55,121 @@ paths:
                                       summary: Clear
                                       temperature: 70
                                       temperatureUnit: F
+                                    - endTime: "2020-01-01T00:00:00Z"
+                                      name: Morning
+                                      startTime: "2020-01-01T00:00:00Z"
+                                      summary: Clear
+                                      temperature: 70
+                                      temperatureUnit: F
                 "400":
                     description: 'not_usa: IP address is not in the US'
                     content:
                         application/vnd.goa.error:
                             schema:
                                 $ref: '#/components/schemas/Error'
+    /tester/all:
+        post:
+            tags:
+                - front
+            summary: test_all front
+            description: Endpoint for running ALL API Integration Tests for the Weather System, allowing for filtering on included or excluded tests
+            operationId: front#test_all
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/TestAllRequestBody'
+                        example:
+                            exclude:
+                                - Repudiandae enim molestiae.
+                                - Ut id iure.
+                            include:
+                                - Dolor sunt maiores.
+                                - Asperiores omnis ducimus ad et mollitia.
+            responses:
+                "200":
+                    description: OK response.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/TestResults'
+                            example:
+                                collections:
+                                    - duration: 1234
+                                      fail_count: 1
+                                      name: Locator Tests
+                                      pass_count: 12
+                                      results:
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                    - duration: 1234
+                                      fail_count: 1
+                                      name: Locator Tests
+                                      pass_count: 12
+                                      results:
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                duration: 1234
+                                fail_count: 1
+                                pass_count: 12
+    /tester/smoke:
+        post:
+            tags:
+                - front
+            summary: test_smoke front
+            description: Endpoint for running API Integration Tests' Smoke Tests ONLY for the Weather System
+            operationId: front#test_smoke
+            responses:
+                "200":
+                    description: OK response.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/TestResults'
+                            example:
+                                collections:
+                                    - duration: 1234
+                                      fail_count: 1
+                                      name: Locator Tests
+                                      pass_count: 12
+                                      results:
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                    - duration: 1234
+                                      fail_count: 1
+                                      name: Locator Tests
+                                      pass_count: 12
+                                      results:
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                        - duration: 1234
+                                          error: 'error getting location for valid ip: %v'
+                                          name: TestValidIP
+                                          passed: true
+                                duration: 1234
+                                fail_count: 1
+                                pass_count: 12
 components:
     schemas:
         Error:
@@ -69,7 +178,7 @@ components:
                 fault:
                     type: boolean
                     description: Is the error a server-side fault?
-                    example: false
+                    example: true
                 id:
                     type: string
                     description: ID is a unique identifier for this particular occurrence of the problem.
@@ -92,9 +201,12 @@ components:
                     example: false
             description: IP address is not in the US
             example:
-                id: 3F1FKVRR
-                message: Value of ID must be an integer
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
                 name: bad_request
+                temporary: true
+                timeout: false
             required:
                 - name
                 - id
@@ -125,12 +237,6 @@ components:
                           summary: Clear
                           temperature: 70
                           temperatureUnit: F
-                        - endTime: "2020-01-01T00:00:00Z"
-                          name: Morning
-                          startTime: "2020-01-01T00:00:00Z"
-                          summary: Clear
-                          temperature: 70
-                          temperatureUnit: F
             example:
                 location:
                     city: San Francisco
@@ -138,6 +244,18 @@ components:
                     long: -122.4233
                     state: CA
                 periods:
+                    - endTime: "2020-01-01T00:00:00Z"
+                      name: Morning
+                      startTime: "2020-01-01T00:00:00Z"
+                      summary: Clear
+                      temperature: 70
+                      temperatureUnit: F
+                    - endTime: "2020-01-01T00:00:00Z"
+                      name: Morning
+                      startTime: "2020-01-01T00:00:00Z"
+                      summary: Clear
+                      temperature: 70
+                      temperatureUnit: F
                     - endTime: "2020-01-01T00:00:00Z"
                       name: Morning
                       startTime: "2020-01-01T00:00:00Z"
@@ -230,6 +348,245 @@ components:
                 - temperature
                 - temperatureUnit
                 - summary
+        TestAllRequestBody:
+            type: object
+            properties:
+                exclude:
+                    type: array
+                    items:
+                        type: string
+                        example: Cupiditate voluptas quod minima.
+                    description: Tests to exclude
+                    example:
+                        - Vitae ut.
+                        - Non officiis asperiores rem.
+                include:
+                    type: array
+                    items:
+                        type: string
+                        example: Sed officia cum.
+                    description: Tests to run
+                    example:
+                        - Temporibus ex quo nihil rem.
+                        - Et et itaque.
+            example:
+                exclude:
+                    - Architecto minima molestiae ad unde.
+                    - Porro possimus iste eius minus nesciunt.
+                    - Dolores ducimus.
+                include:
+                    - Architecto aperiam odit.
+                    - Iste eveniet.
+        TestCollection:
+            type: object
+            properties:
+                duration:
+                    type: integer
+                    description: Duration of the tests in ms
+                    example: 1234
+                    format: int64
+                fail_count:
+                    type: integer
+                    description: Number of tests that failed
+                    example: 1
+                    format: int64
+                name:
+                    type: string
+                    description: Name of the test collection
+                    example: Locator Tests
+                pass_count:
+                    type: integer
+                    description: Number of tests that passed
+                    example: 12
+                    format: int64
+                results:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/TestResult'
+                    description: Test results
+                    example:
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+            description: Collection of test results for grouping by service
+            example:
+                duration: 1234
+                fail_count: 1
+                name: Locator Tests
+                pass_count: 12
+                results:
+                    - duration: 1234
+                      error: 'error getting location for valid ip: %v'
+                      name: TestValidIP
+                      passed: true
+                    - duration: 1234
+                      error: 'error getting location for valid ip: %v'
+                      name: TestValidIP
+                      passed: true
+                    - duration: 1234
+                      error: 'error getting location for valid ip: %v'
+                      name: TestValidIP
+                      passed: true
+            required:
+                - name
+                - duration
+                - pass_count
+                - fail_count
+        TestResult:
+            type: object
+            properties:
+                duration:
+                    type: integer
+                    description: Duration of the test in ms
+                    example: 1234
+                    format: int64
+                error:
+                    type: string
+                    description: Error message if the test failed
+                    example: 'error getting location for valid ip: %v'
+                name:
+                    type: string
+                    description: Name of the test
+                    example: TestValidIP
+                passed:
+                    type: boolean
+                    description: Status of the test
+                    example: true
+            description: Test result for a single test
+            example:
+                duration: 1234
+                error: 'error getting location for valid ip: %v'
+                name: TestValidIP
+                passed: true
+            required:
+                - name
+                - passed
+                - duration
+        TestResults:
+            type: object
+            properties:
+                collections:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/TestCollection'
+                    description: Test collections
+                    example:
+                        - duration: 1234
+                          fail_count: 1
+                          name: Locator Tests
+                          pass_count: 12
+                          results:
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                        - duration: 1234
+                          fail_count: 1
+                          name: Locator Tests
+                          pass_count: 12
+                          results:
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                        - duration: 1234
+                          fail_count: 1
+                          name: Locator Tests
+                          pass_count: 12
+                          results:
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                            - duration: 1234
+                              error: 'error getting location for valid ip: %v'
+                              name: TestValidIP
+                              passed: true
+                duration:
+                    type: integer
+                    description: Duration of the tests in ms
+                    example: 1234
+                    format: int64
+                fail_count:
+                    type: integer
+                    description: Number of tests that failed
+                    example: 1
+                    format: int64
+                pass_count:
+                    type: integer
+                    description: Number of tests that passed
+                    example: 12
+                    format: int64
+            example:
+                collections:
+                    - duration: 1234
+                      fail_count: 1
+                      name: Locator Tests
+                      pass_count: 12
+                      results:
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                    - duration: 1234
+                      fail_count: 1
+                      name: Locator Tests
+                      pass_count: 12
+                      results:
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                    - duration: 1234
+                      fail_count: 1
+                      name: Locator Tests
+                      pass_count: 12
+                      results:
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                        - duration: 1234
+                          error: 'error getting location for valid ip: %v'
+                          name: TestValidIP
+                          passed: true
+                duration: 1234
+                fail_count: 1
+                pass_count: 12
+            required:
+                - collections
+                - duration
+                - pass_count
+                - fail_count
 tags:
     - name: front
       description: Public HTTP frontend
